[gd_scene load_steps=6 format=3 uid="uid://bks7qfkvshhm0"]

[ext_resource type="Script" path="res://Ui/main_menu.gd" id="1_euehd"]
[ext_resource type="Texture2D" uid="uid://clpah202oyl2e" path="res://Graphics/Screenshot_20240531_132628.png" id="1_l0gee"]
[ext_resource type="FontFile" uid="uid://fwku5eiwe4mf" path="res://font/SolidOoky-rxmA.ttf" id="1_qtqp0"]
[ext_resource type="Theme" uid="uid://bwjuqaw4dvqlq" path="res://Ui/new_theme.tres" id="3_n5rns"]

[sub_resource type="Theme" id="Theme_2fqge"]
default_font = ExtResource("1_qtqp0")

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_euehd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_l0gee")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.146597, 0.380547, 0.324044, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_2fqge")
theme_override_colors/font_color = Color(0.346725, 0.677815, 7.70092e-07, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 17
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 100
text = "SLIME JUMP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button Container" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("3_n5rns")

[node name="Start Game" type="Button" parent="MarginContainer/VBoxContainer/Button Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Exit")
theme = ExtResource("3_n5rns")
text = "Start"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer/Button Container"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../Start Game")
focus_neighbor_bottom = NodePath("../Exit")
focus_next = NodePath("../Exit")
focus_previous = NodePath("../Start Game")
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/Button Container"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Start Game")
focus_next = NodePath("../Start Game")
focus_previous = NodePath("../Options")
text = "Exit"

[connection signal="visibility_changed" from="MarginContainer/VBoxContainer/Button Container" to="." method="_on_button_container_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button Container/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button Container/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button Container/Exit" to="." method="_on_exit_pressed"]
